--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,6 +102,7 @@ body {
 			background-color: #f3f3f3;
 			background-position: right center;
 			background-repeat: no-repeat;
+			background-size: contain;
 		}
 
 		.gray-box:not(:last-child){
